[CRONAPP-169] :wheelchair: Fixed contrast issues

--- a/css/app.css
+++ b/css/app.css
@@ -901,7 +901,7 @@ body {
 }
 
 .menu-view {
-    background-color: #0087d4;
+    background-color: #1d4f9e;
     padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
 
